--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build && mv public/_redirects dist/_redirects",
     "lint": "eslint .",
-    "preview": "vite preview"    
+    "preview": "vite preview"
   },
   "dependencies": {
     "axio-ng2-dnd": "5.0.4",
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-latex-next": "^3.0.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
